pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/plus_commutative/src/eq.ph
use super.*;

pub type Eq(T: Type, left: T, right: T) {
    .Refl(T: Type, z: T): Eq(T, z, z),
}