pamc/src/tests/sample_code/should_fail/multi_file/bind/leaky_type/src/mod.ph
type Private {
    .C: Private,
}

pub type Foo {
    .C(_: Private): Foo,
}
